<resources>
    <string name="app_name">eKedai Merchant</string>
    <string name="db_name">ekedai_merchant_db</string>
    <string name="hint_email">Email or Username</string>
    <string name="hint_password">Password</string>
    <string name="login_text">Login</string>
    <string name="tv_date">Date: \u0020</string>
    <string name="tv_date_value">Day, Month, Year</string>
    <string name="tv_invoice_number">Invoice:\u0020</string>
    <string name="tv_invoice_number_value">XXXXXXXX</string>
    <string name="btn_process">Process</string>
    <string name="tv_shipment_address">Shipment Address: \u0020</string>
    <string name="tv_shipment_address_value">24, Jalan ½, Taman Puchong Prima</string>
    <string name="tv_shipment_city">City: \u0020</string>
    <string name="tv_shipment_city_value">Puchong</string>
    <string name="tv_shipment_state">State: \u0020</string>
    <string name="tv_shipment_state_value">Selangor</string>
    <string name="tv_shipment_postcode">Postcode: \u0020</string>
    <string name="tv_shipment_postcode_value">47150</string>
    <string name="tv_shipment_name">Customer Name: \u0020</string>
    <string name="tv_shipment_name_value">Albert</string>
    <string name="tv_shipment_note">Customer Notes: \u0020</string>
    <string name="tv_shipment_note_value">Please Ring the bell</string>
    <string name="header_item">Item</string>
    <string name="header_variant">Variation</string>
    <string name="header_qty">Quantity</string>
    <string name="header_org_qty">Org Qty</string>
    <string name="header_price">Price</string>
    <string name="sub_total">Sub-Total</string>
    <string name="discount">Discount</string>
    <string name="voucher_discount_label">Voucher Discount</string>
    <string name="store_voucher_discount_label">Store Voucher Discount</string>
    <string name="discount_value">0.00</string>
    <string name="service_charges">Service Charges</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="monetary_value">RM 0.00</string>
    <string name="delivery_charges_discount">Delivery Charges Discount</string>
    <string name="delivery_charges_discount_value" />
    <string name="btn_print">Print</string>
    <string name="is_pickup">Pickup \u0020</string>
    <string name="title_activity_orders">Orders</string>
    <string name="new_orders">NEW</string>
    <string name="unpaid_orders">UNPAID</string>
    <string name="processed_orders">Processed </string>
    <string name="pickup_orders">PickUp</string>
    <string name="dispatched_orders">Dispatched</string>
    <string name="ongoing_orders">ONGOING</string>
    <string name="sent_orders">Sent</string>
    <string name="past_orders">HISTORY</string>
    <string name="card_name">Name:\u0020</string>
    <string name="card_name_value">Albert ul Muzrabani alhamed</string>
    <string name="card_phone">Phone:\u0020</string>
    <string name="card_phone_value">03451234567</string>
    <string name="order_quantity">Quantity</string>
    <string name="order_quantity_value">3</string>
    <string name="order_amount">Amount</string>
    <string name="order_amount_value">RM 22.00</string>
    <string name="ready_for_pickup">Process</string>
    <string name="symplified">Symplified</string>
    <string name="choose_a_store">Choose a Store</string>
    <string name="no_store_msg">No Stores Added Yet</string>
    <string name="no_store_with_qr_code_msg">No Stores With QR Code Available</string>
    <string name="total">Total:</string>
    <string name="set_store_status">Set Store Status</string>
    <string name="normal">Normal</string>
    <string name="paused">Paused Until</string>
    <string name="_30_min">30 min</string>
    <string name="_15_min">15 min</string>
    <string name="_45_min">45 min</string>
    <string name="_1_hour">1 hour</string>
    <string name="_24_hours">1 day</string>
    <string name="confirm">Confirm</string>
    <string name="setting_title">Store Settings</string>
    <string name="store_status">Store Status</string>
    <string name="click_here"><u>Click Here</u></string>
    <string name="cancel">Cancel</string>
    <string name="update_order">Update Order</string>
    <string name="edit_order">Edit Order</string>
    <string name="track_order">Track</string>
    <string name="contact_number">Contact Number: \u0020</string>
    <string name="delivery_time">Delivery Time: \u0020</string>
    <string name="request_failure">An error occurred. Please try again.</string>
    <string name="request_failure_with_code">Error %1$s occurred. Please try again.</string>
    <string name="no_internet">Please check your internet connection and try again!</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="welcome_message">Welcome to eKedai App for Merchant</string>
    <string name="order_placed_date">Order Placed:\u0020</string>
    <string name="order_placed_date_value">08–03–22 13:05 pm</string>
    <string name="remember_me">Remember me</string>
    <string name="accept_order">Accept Order</string>
    <string name="order_status">Order Status:\u0020</string>
    <string name="update_status">Update Status:\u0020</string>
    <string name="order_details">View Details</string>
    <string name="order_status_value">Delivered</string>
    <string name="order_type">Order Type:\u0020</string>
    <string name="order_type_value">Delivery</string>
    <string name="order_curr_status_value">Preparing</string>
    <string name="store_type">Store Type</string>
    <string name="service_type">Service Type</string>
    <string name="product_name">Red &amp; Hot Pizza</string>
    <string name="product_status">Active</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add New</string>
    <string name="dialog_title">Cancel Order</string>
    <string name="dialog_okay">Okay</string>
    <string name="ok">Ok</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_message">Are you sure you want to cancel the order?</string>
    <string name="logout">Logout</string>
    <string name="version">Symplified 2022 | version 1.3.2</string>
    <string name="call">Call</string>
    <string name="navigate">Navigate</string>
    <string name="edit_product">Edit Product</string>
    <string name="staging_mode">Staging mode</string>
    <string name="production_mode_text">Switch to production</string>
    <string name="empty_orders_text">No orders to show. Swipe down to refresh or check back later.</string>
    <string name="error_text">An error occurred. Please try again.</string>
    <string name="error_text_pull_to_refresh">An error occurred. Please swipe down to retry.</string>
    <string name="order_items_fail_text">Failed to get items. Please swipe down to refresh.</string>
    <string name="edit_order_warning">You are about to change a confirmed order.\u000AYou can only perform this once.\u000AAny extra money will be refunded to customer.</string>
    <string name="update_order_warning">You have made changes to a confirmed order.\u000AThis action cannot be undone.\u000ADo you want to continue?</string>
    <string name="order_updated">Order Updated</string>
    <string name="order_updated_message">The refund will be in place.\u000ARefund Amount:\u0020</string>
    <string name="call_error_message">Your device does not support this function.</string>
    <string name="deliverin">DeliverIn</string>
    <string name="notif_firebase_error_title">Connectivity Error</string>
    <string name="notif_firebase_error_text">Unable to connect to Google services on this network.</string>
    <string name="notif_firebase_error_text_full">Unable to connect to Google services on this network. You will not be able to receive new order notifications. Please connect to a different network and try logging in again.</string>
    <string name="add_staff_member">Add Staff Member</string>
    <string name="name_label">Name:</string>
    <string name="username_label">Username:</string>
    <string name="add_staff_member_title">Add Staff Member</string>
    <string name="staff_member_name_label">Staff Member Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_staff_member_name">Staff Member Name</string>
    <string name="change_password">Change Password</string>
    <string name="delete_staff_member">Delete Staff Member</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="empty_staff_text">No staff members added yet.</string>
    <string name="store_label">Store:</string>
    <string name="date_label">Date:</string>
    <string name="total_sales_label">Total Sales:</string>
    <string name="payment_type_label">Payment Type</string>
    <string name="sales_amount_label">Sales Amount</string>
    <string name="end_shift">End Shift</string>
    <string name="empty_sales_text">No sales to show for this user at this time.</string>
    <string name="version_indicator">Symplified %1$s | Ver. %2$s </string>
    <string name="monetary_amount">%1$s %2$s</string>
    <string name="inverse_monetary_amount">- %1$s %2$s</string>
    <string name="table_no">Table No. %1$s</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="paid">Paid</string>
    <string name="payment_type_heading">%1$s Payment</string>
    <string name="invoice_no">Invoice Id: %1$s</string>
    <string name="applied_discount">Applied Discount</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="header_special_instruction">Special Instructions:</string>
    <string name="change_due_label">Change Due:</string>
    <string name="search_hint">Search</string>
    <string name="bt_devices_pref_key">Bluetooth Device Preferences</string>
    <string name="empty_products_text">No products added yet.</string>
    <string name="all">All</string>
    <string name="filter">Filter</string>
    <string name="search_result_text">Results for \"%1$s\"</string>
    <string name="bluetooth_permission_error">Bluetooth permission not given</string>
    <string name="empty_bluetooth_device_text">No Bluetooth devices found.</string>
    <string name="scan_code">Scan Code</string>
    <string name="history">History</string>
    <string name="scan_voucher_code">Scan Voucher Code</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="product_details">Product Details</string>
    <string name="voucher_code_template">Voucher Code: %1$s</string>
    <string name="valid_until_template">Valid Until: %1$s</string>
    <string name="quantity_template">Quantity: %1$s</string>
    <string name="price_template">%1$s %2$s</string>
    <string name="redeem_now">Redeem Now</string>
    <string name="successfully_redeemed">Successfully Redeemed!</string>
    <string name="close">Close</string>
    <string name="redemption_date_template">Redeemed: %1$s</string>
    <string name="product_image">Product Image</string>
    <string name="empty_vouchers_text">No vouchers redeemed yet for any store.</string>
    <string name="voucher_history_error_text">Failed to get vouchers. Please swipe down to try again.</string>
    <string name="voucher_redemption">Voucher Redemption</string>
    <string name="already_redeemed">This voucher has already been redeemed</string>
    <string name="not_an_own_store_voucher">This voucher does not belong to any of your stores</string>
    <string name="search_voucher_code">Search voucher code</string>
    <string name="voucher_expired">This voucher is expired</string>
    <string name="installing_scanner_module">Installing scanner module</string>
    <string name="continue_text">Continue</string>
    <string name="select_redemption_store">Select Redemption Store</string>
    <string name="redeemed_at_template">Redeemed at: %1$s</string>
</resources>