<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetails">

    <include android:id="@+id/toolbar"
        layout="@layout/custom_action_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <RelativeLayout
        android:id="@+id/rl_invoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/invoice_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/tv_date"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/invoice_tv_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/invoice_tv_date"
            android:text="@string/tv_date_value"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/invoice_tv_invNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/invoice_tv_date"
            android:text="@string/tv_invoice_number"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/invoice_tv_invNumber_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/invoice_tv_invNumber"
            android:layout_below="@+id/invoice_tv_date"
            android:text="@string/tv_invoice_number_value"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:text="@string/btn_process"
            app:cornerRadius="20dp" />

    </RelativeLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_invoice" />


    <RelativeLayout
        android:id="@+id/rl_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        >


        <TextView
            android:id="@+id/address_shipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/tv_shipment_address"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_shipment_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/address_shipment"
            android:layout_marginBottom="5dp"
            android:text="@string/tv_shipment_address_value"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_shipment_value"
            android:layout_marginBottom="5dp"
            android:text="@string/tv_shipment_city"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_city_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/address_city"
            android:layout_below="@+id/address_shipment_value"
            android:layout_marginBottom="5dp"
            android:text="@string/tv_shipment_city_value"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/address_city"
            android:text="@string/tv_shipment_state"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_state_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/address_state"
            android:layout_below="@+id/address_city"
            android:text="@string/tv_shipment_state_value"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_postcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/address_state"
            android:text="@string/tv_shipment_postcode"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_postcode_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/address_postcode"
            android:layout_below="@+id/address_state_value"
            android:text="@string/tv_shipment_state_value"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/address_postcode"
            android:text="@string/tv_shipment_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/address_postcode"
            android:layout_toEndOf="@+id/address_name"
            android:text="@string/tv_shipment_postcode_value"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/address_name"
            android:text="@string/tv_shipment_note"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_note_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/address_name"
            android:layout_toEndOf="@id/address_note"
            android:text="@string/tv_shipment_note_value"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/address_note_value"
            android:text="@string/is_pickup"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/address_is_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_note_value"
            android:layout_toEndOf="@+id/address_pickup" />
<!--        android:src="@drawable/ic_highlight_off_black_24dp"-->


    </RelativeLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_address" />

    <RelativeLayout
        android:id="@+id/rl_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintTop_toBottomOf="@+id/rl_address"
        >

        <include
            android:id="@+id/headers"
            layout="@layout/order_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_below="@+id/headers" />

    </RelativeLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_items" />

    <RelativeLayout
        android:id="@+id/rl_billing_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        >

        <TextView
            android:id="@+id/billing_subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="5dp"
            android:text="@string/sub_total"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/billing_subtotal_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/sub_total_value"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/billing_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/billing_subtotal"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="5dp"
            android:text="@string/discount"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/billing_discount_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/billing_subtotal_value"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/discount_value"
            android:textSize="16sp" />



        <TextView
            android:id="@+id/billing_service_charges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/billing_discount"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="5dp"
            android:text="@string/service_charges"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/billing_service_charges_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/billing_discount"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/service_charges_value"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/billing_delivery_charges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/billing_service_charges"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="5dp"
            android:text="@string/delivery_charges"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/billing_delivery_charges_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/billing_service_charges"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/delivery_charges_value"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/billing_delivery_charges_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/billing_delivery_charges"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="5dp"
            android:text="@string/delivery_charges_discount"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/billing_delivery_charges_discount_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/billing_delivery_charges"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/delivery_charges_discount_value"
            android:textSize="16sp" />

        <View
            android:id="@+id/subdivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:layout_below="@id/billing_delivery_charges_discount"
            />

        <TextView
            android:id="@+id/billing_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subdivider"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="5dp"
            android:text="@string/total"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/billing_total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subdivider"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/delivery_charges_value"
            android:textSize="16sp" />

    </RelativeLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".5"
        android:visibility="invisible"
        android:id="@+id/btn_print"
        app:cornerRadius="25dp"
        android:paddingVertical="10dp"
        android:text="@string/btn_print"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_billing_details"/>



</androidx.constraintlayout.widget.ConstraintLayout>